Changelog for mSearch2.

0.8.1 pl
==============
- [mFilter2] Improved work with modified &queryVar=`` and &parentsVar=``.
- [mFilter2] Improved return of error messages, when nothing found.

0.8.0 pl
==============
- [#7] You can prefix ids in "&resources=``" and "&parents=``" with dash for excluding from query.
- [#5] Added parameter "&toSeparatePlaceholders=``" to snippet mFilter2. Parameter "&toPlaceholder" renamed to "&toPlaceholders".
- Fixed issues when parents not in current contexts.
- Added parameter "&hideContainers=``" to both snippets.
- Added parameters "&tplWrapper=``" and "&wrapIfEmpty=``" to snippet mSearch2.
- Accelerated method mse2FiltersHandler::filterNumber().
- Fixed bug in filters, when TVs has capital letters in the name.
- [mFilter2] Added default implementation of "limit" parameter.
- [mFilter2] Added default implementation of range slider.
- [mFilter2] Added default implementation of list of selected inputs.
- Method "mSearch2.load()" in default javascript can receive filter parameters and callback function.

0.7.0 pl
==============
- Added support for list-style TVs.
- Fixed issues with pdoTools installation.

0.6.2 pl2
==============
- [mFilter2] New parameter "tpls" for change tpl of rows in request.
- [mFilter2] Fixed warning in log when no MS2 installed.
- [mFilter2] Fixed cache problem when retrieving products in multicategories, again.

0.6.1 pl
==============
- [mFilter2] Added support of old browsers without history api. They will use hash in url.

0.6.1 rc1
==============
- Added method mse2FiltersHandler::buildCategoriesFilter().
- Added method mse2FiltersHandler::buildFullnameFilter().
- Added ability to work with mSearch1 for smooth upgrade.
- Fixed bug with installation when "archive_with" setting is enabled.
- Improved work with MS2 multi categories.
- Fixed sort of filter values in ascending order.

0.6.0 beta
==============
- System setting "mse2_index_min_words_length" is set to 4 by default, for exclude prepositions.