@@ -4,6 +4,7 @@ Changelog for mSearch2.
 ==============
 - [mFilter2] Improved work with modified &queryVar=`` and &parentsVar=``.
 - [mFilter2] Improved return of error messages, when nothing found.
+- [mFilter2] Improved work with limit, when page loaded by direct link.
 
 0.8.0 pl
 ==============
